Trying some different approaches but getting the same socket.id on each client instances

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script> -->
     <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
@@ -50,7 +50,7 @@
 	     initialise the router -->
     %sapper.scripts%
     <script>
-      const socket = io();
+      // const socket = io();
     </script>
   </body>
 </html>
